# cellmate-benchmark

./: .gitignore  README.md  pyproject.toml
archive/: pyproject.toml
archive/scripts/: evaluator.py
data/: README.md  data-preprocess.ipynb  final-data-statistics.ipynb  final_dataset.csv  grouping.py
data/catalogs/: action_catalog.csv  app_catalog.json  object_catalog.csv
data/labeled_data/: data_commerce_platform.csv  data_commerce_platform_labeled.csv  (+10 more)
results/: summary_commerce_platform_claude-sonnet-4-5_20260410_234000.json  summary_commerce_platform_gemini-2.5-flash_20260411_001232.json  summary_commerce_platform_gpt-5-mini_20260411_000333.json  summary_developer_collaboration_platform_claude-sonnet-4-5_20260415_131358.json  summary_developer_collaboration_platform_gemini-2.5-flash_20260415_131547.json  summary_developer_collaboration_platform_gpt-5-mini_20260415_131520.json  summary_media_library_platform_claude-sonnet-4-5_20260415_134011.json  summary_media_library_platform_gemini-2.5-pro_20260415_140233.json  summary_media_library_platform_gpt-5-mini_20260415_134756.json  summary_professional_network_platform_claude-sonnet-4-5_20260427_181701.json  summary_professional_network_platform_gemini-2.5-pro_20260427_182331.json  summary_professional_network_platform_gpt-5-mini_20260427_181907.json  summary_reservation_service_platform_claude-sonnet-4-5_20260427_163653.json  summary_reservation_service_platform_gemini-2.5-pro_20260427_164734.json  summary_reservation_service_platform_gpt-5-mini_20260427_164039.json
scripts/: evaluator.py
(+30 files in other folders)
